--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Then open http://localhost:8000 in your browser.
   <meta charset="UTF-8" />
   <title>Bilingual Nutrition Calculator & Diary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- Tailwind CSS via CDN for development.
        For production, install Tailwind as a PostCSS plugin or use the CLI.
        See: https://tailwindcss.com/docs/installation -->
