--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ Then open http://localhost:8000 in your browser.
     </div>
   </div>
 
-  <!-- Export Modal -->
-  <div id="exportModal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-    <div class="modal-content bg-white p-6 rounded shadow-lg max-w-md w-full relative">
+  <!-- Export Modal with increased z-index -->
+  <div id="exportModal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="modal-content bg-white p-6 rounded shadow-lg max-w-md w-full mx-4 relative">
       <span class="close absolute top-2 right-2 text-gray-500 text-2xl cursor-pointer" onclick="closeExportModal()">&times;</span>
       <h2 id="exportModalTitle" class="text-center text-2xl text-blue-500 mb-4">Export Report</h2>
       <div class="mb-4">
@@ -158,9 +158,9 @@ Then open http://localhost:8000 in your browser.
     </div>
   </div>
 
-  <!-- Meal Modal for Search Results -->
-  <div id="mealModal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-    <div class="modal-content bg-white p-6 rounded shadow-lg max-w-md w-full relative">
+  <!-- Meal Modal for Search Results with increased z-index -->
+  <div id="mealModal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="modal-content bg-white p-6 rounded shadow-lg max-w-md w-full mx-4 relative">
       <span class="close absolute top-2 right-2 text-gray-500 text-2xl cursor-pointer" onclick="closeMealModal()">&times;</span>
       <h2 id="modalMealName" class="text-center text-2xl text-blue-500 mb-4"></h2>
       <p class="mb-2">
